# libutil

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  bootstrap.sh
cmake-modules/: GetGitRevisionDescription.cmake
script/: guard.sh
src/: CMakeLists.txt  config.c  log.c  syslogd.c  version.c.in
src/libutil/: arch.h  config.h  headers.h  likely.h  list.h  log.h  push_options.h  queue.h  seqlock.h  syslogd.h  util.h  version.h
test/: CMakeLists.txt  config.c  config.sh  link.c  link.cpp  queue.c
